feat: configuration section partially completed, remaining tan stack apis added
